--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "formidable": "^1.2.1",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
