--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "body-parser": "^1.19.0",
     "ejs": "^2.6.2",
     "express": "^4.17.1",
+    "form-data": "^2.4.0",
     "formidable": "^1.2.1",
+    "fs": "0.0.1-security",
+    "open": "^6.4.0",
     "path": "^0.12.7",
     "request": "^2.88.0"
   },
